# FirstIDA-DB

./: .gitignore  README.md  pytest.ini  requirements.txt
db-graph/: DB_MAP.md  README.md  dbgraph.html  graph.json  labels.json  semantic_cache.json  semantic_edges.json  structural_edges.json  units.json
docker/: Dockerfile
docs/: DESIGN.md
docs/superpowers/plans/: 2026-07-08-phase1-extraction-pipeline.md  2026-07-11-disasmgen-cpp-generator.md
docs/superpowers/specs/: 2026-07-08-disasm-dataset-pipeline-design.md  2026-07-11-disasmgen-cpp-generator-design.md
generator/: CMakeLists.txt
generator/src/: direct.cpp  direct.hpp  format_zydis.cpp  format_zydis.hpp  hybrid.cpp  hybrid.hpp  ir.hpp  jsonl.cpp  jsonl.hpp  lower_asmjit.cpp  lower_asmjit.hpp  main.cpp  render_c.cpp  render_c.hpp
generator/tests/: test_direct.cpp  test_hybrid.cpp  test_jsonl.cpp  test_render_c.cpp
pipeline/: compile.py  dashboard.py  disasm.py  env.py  extract.py  gallery.py  generate.py  harvest.py  journal.py  pair.py  run_both.py  run_pipeline.py  scrape.py  store.py
scripts/: build_graph.sh  collect.sh  gallery.sh  generate.sh  journal.sh  run_all.sh
tests/: conftest.py  test_compile.py  test_dashboard.py  test_disasm.py  test_env.py  test_extract.py  test_gallery.py  test_generate.py  test_pair.py  test_run_pipeline.py  test_run_pipeline_origin.py  test_store.py
tests/fixtures/: objdump_sample.txt  overload.cpp  simple.c
tests/fixtures/minirepo/: add.c
